@@ -2,6 +2,7 @@ Revision history for Spreadsheet-HTML
 
 1.14
     - file param now accepts URIs
+    - alpha param more robust: can be lower cased and have "#" prepended to it
     - conway() now supplies alpha param (off param reverts to normal)
     - reminder: animate has been deprecated since v1.05
 
